--- a/templates/modelo.html
+++ b/templates/modelo.html
@@ -14,9 +14,10 @@
             margin-bottom: 0;
         }
         .table th, .table td {
-            padding: 0.5rem;
+            padding: 0.25rem !important;
             vertical-align: middle;
             border: 1px solid #000;
+            font-size: 10px !important;
         }
         .table-bordered {
             border: 1px solid #000;
@@ -32,7 +33,7 @@
             color: #FF6600;
         }
         .logo {
-            max-height: 40px;
+            max-height: 20px;
         }
         .border-dark {
             border-color: #000 !important;
@@ -57,6 +58,7 @@
                 font-size: 10px;
             }
         }
+
     </style>
 </head>
 <body>
