--- a/templates/index.html
+++ b/templates/index.html
@@ -735,6 +735,9 @@
                         <button type="button" class="btn btn-info" id="bulkInsertButton">
                             <i class="bi bi-cloud-upload"></i> Inserir dados em massa
                         </button>
+                        <button type="button" class="btn btn-warning" id="resetCacheButton">
+                            <i class="bi bi-arrow-clockwise"></i> Resetar Cache
+                        </button>
                     </div>
                 </form>
             </div>
