adicionando tela para gerenciar recursos

--- a/templates/index.html
+++ b/templates/index.html
@@ -738,6 +738,9 @@
                         <button type="button" class="btn btn-warning" id="resetCacheButton">
                             <i class="bi bi-arrow-clockwise"></i> Resetar Cache
                         </button>
+                        <a class="btn btn-secondary" href="/recursos">
+                            <i class="bi bi-list-ul"></i> Ver recursos
+                        </a>
                     </div>
                 </form>
             </div>
